fix overflow bug 2

--- a/src/components/styles/coinsTable.css
+++ b/src/components/styles/coinsTable.css
@@ -88,9 +88,6 @@ table td{
 }
 
 @media (max-width: 44rem) {
-    .coins-table{
-        max-width: 90vw;
-    }
 
     .pagination{
         margin-bottom: 2.6rem;
